<resources>
    <string name="app_name">Messageium</string>
    <string name="credit_1"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="credit_2"><div>Icons made by <a href="https://icon54.com/" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="credit_3"><div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="credit_4"><div>Icons made by <a href="" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="credit_5"><a href="https://icons8.com/icons/set/send-letter" target="_blank">Send Letter icon</a> icon by <a href="https://icons8.com" target="_blank">Icons8</a></string>
    <string name="credit_6"><a href='https://www.freepik.com/photos/tree'>Tree photo created by wirestock - www.freepik.com</a></string>
    <string name="credit_7"><a href='https://www.freepik.com/photos/background'>Background photo created by fanjianhua - www.freepik.com</a></string>
    <string name="credit_8"><a href='https://www.freepik.com/photos/tree'>Tree photo created by wirestock - www.freepik.com</a></string>
    <string name="credit_9"><a href='https://www.freepik.com/photos/background'>Background photo created by dashu83 - www.freepik.com</a></string>
    <string name="tandc">By clicking agree your agreeing to the terms and condition\'s.</string>
    <string name="banner_ad_unit_id1" translatable="false">ca-app-pub-5615682506938042/1059868401</string>
    <string name="banner_ad_unit_id2" translatable="false">ca-app-pub-5615682506938042/6915023835</string>
    <string name="banner_ad_unit_id3" translatable="false">ca-app-pub-5615682506938042/4720105335</string>
    <string name="banner_ad_unit_id4" translatable="false">ca-app-pub-5615682506938042/4835477796</string>
    <string name="banner_ad_unit_id5" translatable="false">ca-app-pub-5615682506938042/4528533646</string>
    <string name="banner_ad_unit_id6" translatable="false">ca-app-pub-5615682506938042/5765416083</string>
    <string name="banner_ad_unit_About" translatable="false">ca-app-pub-5615682506938042/1816308039</string>
    <string name="add_chat">Add Chat</string>
    <string name="settings">Settings</string>
    <string name="chat_main" translatable="false">ca-app-pub-5615682506938042/9926110222</string>
    <string name="edit_profile" translatable="false">ca-app-pub-5615682506938042/5865260490</string>
    <string name="FindUsersActivity" translatable="false">ca-app-pub-5615682506938042/4782730227</string>
    <string name="LoginActivity" translatable="false">ca-app-pub-5615682506938042/9421362123</string>
    <string name="ResetPasswordActivity" translatable="false">ca-app-pub-5615682506938042/9843485210</string>
    <string name="Register" translatable="false">ca-app-pub-5615682506938042/8064581256</string>
    <string name="Terms_ConditionsActivity" translatable="false">ca-app-pub-5615682506938042/1159728726</string>
    <string name="StartActivity" translatable="false">ca-app-pub-5615682506938042/6412055406</string>
    <string name="AboutActivity" translatable="false">ca-app-pub-5615682506938042/6089487745</string>
    <string name="GroupMessageActivity" translatable="false">ca-app-pub-5615682506938042/7863422196</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="app_version">App Version</string>
    <string name="check_update">Check Update</string>
    <string name="biometric_pin_authentication">BioMetric/Pin Authentication</string>
    <string name="read_recipients_beta">Read Recipients (Beta)</string>
    <string name="accepted">Accepted</string>
    <string name="blocked">Blocked</string>
    <string name="group_name">Group name..</string>
    <string name="next">Next</string>
    <string name="select_theme">Select Theme</string>
    <string name="default_theme">Default</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="edit_status">Edit status</string>
    <string name="username_edit_txt">Username</string>
    <string name="enter_status">Enter status</string>
    <string name="waiting_for_network">Waiting for Network</string>
    <string name="warning_txt">This user is messaging for the first time if you know accept it. If you dont know reject it. If you dont want to talk block them.</string>
    <string name="accept_warning">Accept</string>
    <string name="reject_warning">Reject</string>
    <string name="block_warning">Block</string>
    <string name="send_message">Send message</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="otp_instructions">An OTP would be sent to the phone number given below to verify. Please enter the country code and phone number accurately.</string>
    <string name="phone_number">Phone Number</string>
    <string name="OTP_Warning">Carrier SMS Charges may apply.</string>
    <string name="verify">Verify</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_clicking_agree_your_agreeing_to_our_privacy_policy">By clicking agree your agreeing to our Privacy Policy.</string>
    <string name="agree">AGREE</string>
    <string name="joined_on">Joined on</string>
    <string name="people">People</string>
    <string name="customize">Customize</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="app_by_margsapp">App by MargsApp</string>
    <string name="welcome_to_messenger">Welcome to Messageium</string>
    <string name="login_using_phone_no">Login Using Phone No</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="verification_code">Verification Code</string>
    <string name="Verification_info">A verification code is sent to your mobile number \n +91 9491951924</string>
    <string name="didn_t_recive_code_yet">Didn\'t receive code yet?</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="manage_participants">Manage Participants</string>
    <string name="search_partipants">Search Participants</string>
    <string name="created_on">Created on</string>
    <string name="leave_group">Leave Group</string>
    <string name="search_users">Search Users</string>
    <string name="info">Info</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="make_admin">Make Admin</string>
    <string name="message">Message</string>
    <string name="voice_call">Voice call</string>
    <string name="video_call">Video Call</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="cancel">Cancel</string>
    <string name="create_group">Create Group</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="block">Block</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="edit">Edit</string>
    <string name="choose_language">Choose Language</string>
    <string name="app_language">App Language</string>
    <string name="english">English</string>
    <string name="add_friends">Add Friends</string>
    <string name="typing">Typing…</string>
    <string name="is_added"> is added.</string>
    <string name="not_an_admin">Not an Admin!</string>
    <string name="admin_message">You have to be Admin to make changes in group.</string>
    <string name="ask_leave_group">Are you sure you want to leave the group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="group_admin">Group Admin</string>
    <string name="ask_remove">Are you sure you want to remove this user?</string>
    <string name="ask_to_make">Are you sure you want to make this user Admin? (Note this is an irreversible process)</string>
    <string name="feature_not_availble">This feature is not available yet.</string>
    <string name="blocked_this_user">You have blocked this user.</string>
    <string name="log_removed"> has been removed from group</string>
    <string name="left_group"> has left the group.</string>
    <string name="OTP_DESC">A verification code is sent to your mobile number \n</string>
    <string name="Ask_OTP_again">Do you want to get Verification code again?</string>
    <string name="another_code_sent">"Another code has sent to "</string>
    <string name="ErrorOccured">Something went wrong 0x08030201</string>
    <string name="want_to_block">Are you sure you want to block this user?</string>
    <string name="like_to_update">There\'s a new version of this app would you like to update?</string>
    <string name="upto_date">This app is up to date</string>
    <string name="ok">OK</string>
    <string name="now_admin"> is now Admin.</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="downloadimage">Download</string>
    <string name="set_as_wallpaper">Set Wallpaper</string>
    <string name="profile">Set Profile</string>
    <string name="share">Share</string>
    <string name="wallpaper_ask">Are you sure you want to set this image as wallpaper?</string>
    <string name="wallpaper_title">Set Wallpaper</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="fragment1_description">Messageium is an instant messaging service with user\'s privacy in mind. It Aims to give user\'s a fluent and pleasant experience. This app is still under development so it maybe unstable and may have bugs. You can give feedback and report any issues by clicking contact us in the settings.</string>
    <string name="fragment2_description">MargsApp takes privacy seriously all your personal messages are encrypted. Messages are only seen by who you send them to. MargsApp cannot read your messages while they are being sent between you and the person you are sending to. MargsApp nor MargsGlobal sells your personal data to advertisers or data brokers for more information check the privacy policy.</string>
    <string name="Fragment3_description">Once signed in with google or phone number you can add pin/fingerprint/face (Depends on your device) as authentication for additional security. If you have enabled for android then you can add for the app too. You can enable this in App\'s settings.</string>
    <string name="Microphone">Microphone</string>
    <string name="Contacts">Contacts</string>
    <string name="Storage">Storage</string>
    <string name="SMS">SMS</string>
    <string name="continue_">Continue</string>
</resources>