<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".privacyActivity"
    android:background="@color/background">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/privacy_policy"
        android:id="@+id/title"
        android:textColor="@color/blacktext"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking_agree_your_agreeing_to_our_privacy_policy"
        android:textAlignment="center"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/privacy_page"
        android:layout_below="@+id/textView2"
        android:layout_above="@+id/agree"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:id="@+id/agree"
        android:background="@drawable/button"
        android:textColor="@color/background_white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>


</RelativeLayout>