<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout"
    tools:context=".Authentication.PermissionCheck"
    android:background="@color/diffrentBack">


    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout">
    </include>

    <androidx.cardview.widget.CardView
        android:id="@+id/camera_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/card_back"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/camera"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="35dp"
                android:text="@string/camera"
                android:textSize="20sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/microphone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/card_back"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/camera_card"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_mic_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/Microphone"
                app:tint="@color/black_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/microphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="35dp"
                android:text="@string/Microphone"
                android:textSize="20sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/contacts_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/card_back"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/microphone_card"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/Contacts"
                android:src="@drawable/ic_baseline_contacts_24"
                app:tint="@color/black_text" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="35dp"
                android:text="@string/Contacts"
                android:textSize="20sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/storage_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/card_back"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/contacts_card"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/Storage"
                android:src="@drawable/ic_baseline_perm_media_24"
                app:tint="@color/black_text" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="35dp"
                android:text="@string/Storage"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/SMS_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/card_back"
        app:cardCornerRadius="15dp"
        android:layout_below="@+id/storage_card"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/SMS"
                android:src="@drawable/ic_baseline_sms_24"
                app:tint="@color/black_text" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="35dp"
                android:text="@string/SMS"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button"
        android:text="@string/continue_"
        android:visibility="visible"
        android:textColor="@color/background_white" />

</RelativeLayout>